--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
     "node": "11.3.0"
   },
   "dependencies": {
-    "bootstrap": "^4.3.1",
-    "node-sass": "^4.12.0",
-    "react": "^16.9.0",
-    "react-bootstrap": "^1.0.0-beta.12",
+    "bootstrap": "^4.4.1",
+    "node-sass": "^4.13.1",
+    "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-browser-router": "^2.1.2",
-    "react-dom": "^16.9.0",
+    "react-dom": "^16.12.0",
     "react-grid-system": "^5.0.2",
     "react-helmet": "^5.2.1",
-    "react-horizontal-scrolling-menu": "^0.7.3",
-    "react-router-dom": "^5.1.0",
-    "react-scripts": "3.1.2",
+    "react-horizontal-scrolling-menu": "^0.7.5",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.3.1",
     "react-scroll-horizontal": "^1.6.2"
   },
   "scripts": {
